--- a/css/game.css
+++ b/css/game.css
@@ -2,6 +2,30 @@
 	font-family: "Courier New", Courier, monospace;
 }
 
+#topbar {
+	font-family: 'Lucida Grande', 'Arial', sans-serif;
+	text-shadow: 0px 1px #f1f1f1;
+	height: 24px;
+	color: #414141;
+	width: 100%;
+	margin: 0 auto;
+	text-align: center;
+	position: relative;
+	background-image: url('../img/bar.jpg');
+	background-repeat: repeat-x;
+	border-top-left-radius: 5px;
+	border-top-right-radius: 5px;
+	border-bottom: 1px solid #696969;
+	border-top: rgba(0,0,0,0.5);
+	border-left: rgba(0,0,0,0.5);
+	border-right: rgba(0,0,0,0.5);
+}
+
+#topbar span {
+	position: relative;
+	top: 5px;
+}
+
 #Title {
 	font-size: 60px;
 	color: #8f908a;
@@ -42,23 +66,24 @@
 /* firepad */
 
 .cm-s-pad {
-            background-color:#222;
-            color:#FFF;
-        }
-        .firepad {
-            height:600px;
-        }
-        .firepadContainer {
-            width:40%;
-            display:inline-block;
-        }
-        #firepad1 {
-            margin-left:5%;
-        }
-        #firepad2 {
-            margin-left:10%;
-        }
+	background-color:#222;
+	color:#FFF;
+}
 
+.firepad {
+	height:1000px;
+}
+
+.firepadContainer {
+	width:100%;
+	display:inline-block;
+}
+
+#firepad1 {
+}
+
+#firepad2 {
+}
 /* unused */
 
 #GameStartDiv .button {
