Fixed syntax highlighting

--- a/css/game.css
+++ b/css/game.css
@@ -88,8 +88,8 @@ padding-right: 10px;
 
 /* firepad */
 .cm-s-pad {
-    background-color:#222;
-    color:#FFF;
+    //background-color:#222;
+    //color:#FFF;
 }
 .cm-s-console {
     background-color:#333;
