Made background white

--- a/css/game.css
+++ b/css/game.css
@@ -104,8 +104,7 @@ padding-right: 10px;
 
 /* firepad */
 .cm-s-pad {
-    background-color:#222;
-    color:#FFF;
+    background-color:#EEE;
 }
 .cm-s-console {
     background-color:#333;
