--- a/css/title.css
+++ b/css/title.css
@@ -16,8 +16,16 @@
 }
 
 #JoinCode {
-	visibility: hidden;
+	width: 250px;
 	margin-top: 25px;
+	margin-bottom: 25px;
+}
+
+#LanguageSelector {
+	height:33px;
+	width: 250px;
+	margin-top: 25px;
+	margin-right: -15px;
 	margin-bottom: 25px;
 }
 
