Sound for party mode

--- a/css/game.css
+++ b/css/game.css
@@ -121,7 +121,7 @@ padding-right: 10px;
 }
 
 /* firepad */
-.cm-s-pad {
+.cm-s-default {
     background-color:#EEE;
 }
 .cm-s-console {
@@ -133,7 +133,7 @@ padding-right: 10px;
     text-shadow: 0 0 10px rgba(0,0,0,0.4);
 }
 .cm-s-party {
-    
+
 }
 .CodeMirror-gutters {
     height: 100% !important;
