--- a/css/game.css
+++ b/css/game.css
@@ -31,7 +31,14 @@
     color: #000000;
 }
 
+#JokeModal {
+    background-color: #eeeeee;
+    color: #000000;
+}
 #modalMessage {
+    font-size: 30px;
+}
+#jokeContent {
     font-size: 30px;
 }
 
@@ -117,7 +124,8 @@ padding-right: 10px;
     padding-left: 20%;
     padding-right: 20%;
     font-weight: 300;
-    margin-top: 25px;
+    margin-top: 5px;
+    margin-bottom: 5px;
 }
 
 /* firepad */
